# likwid

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  .zenodo.json  CHANGELOG  Doxygen  INSTALL  Makefile  README  README.md  README_ROCM.md  coding-guidelines.md  config.mk  config_range.mk  include_GCC.mk  include_ICC.mk  index.html  likwid-agent.conf
Doxygen-4.2.1/: F-markerAPI-code.html  annotated.html  atom.html  broadwell.html  broadwelld.html  broadwellep.html  build.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bf59d41d727aac54882b42f236ae575e.html  faq.html  functions_vars.html  group__Access.html  group__AffinityDomains.html  group__CPUParse.html  group__CPUTopology.html  group__Config.html  group__CpuFeatures.html  group__CpuFreq.html  group__Fortran__Interface.html  group__PerfMon.html  haswell.html  haswellep.html  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_11.map  inherit_graph_12.md5  inherit_graph_15.md5  inherit_graph_2.md5  inherit_graph_3.md5  inherit_graph_5.md5  inherit_graph_7.md5  inherit_graph_8.map  inherit_graph_9.map  inherits.html  interfacelikwid_1_1likwid__markerClose-members.html  interfacelikwid_1_1likwid__markerGetRegion-members.html  interfacelikwid_1_1likwid__markerInit.html  interfacelikwid_1_1likwid__markerNextGroup-members.html  interfacelikwid_1_1likwid__markerRegisterRegion-members.html  (+123 more)
Doxygen-4.3.2/: C-likwidAPI-code.html  C-markerAPI-code.html  F-markerAPI-code.html  Lua-likwidAPI-code.html  annotated.html  atom.html  broadwell.html  broadwelld.html  broadwellep.html  build.html  classes.html  core2.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bf59d41d727aac54882b42f236ae575e.html  faq.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  group__Access.html  group__AffinityDomains.html  group__CPUParse.html  group__CPUTopology.html  group__Config.html  haswell.html  (+217 more)
ext/GOTCHA/src/: CMakeLists.txt  elf_ops.c  elf_ops.h  gotcha.c  gotcha_auxv.c  gotcha_auxv.h  gotcha_dl.c  gotcha_dl.h  gotcha_utils.c  gotcha_utils.h  hash.c  hash.h  libc_wrappers.c  libc_wrappers.h  library_filters.c  library_filters.h  tool.c  tool.h  translations.c  translations.h
ext/GOTCHA/src/example/: CMakeLists.txt
ext/GOTCHA/src/example/autotee/: CMakeLists.txt  autotee.c  test_autotee.c
ext/GOTCHA/src/example/minimal/: CMakeLists.txt  sampleLib.c  sampleLib.h  symbolLookup.c
test/cmake/: CMakeLists.txt  test.c
(+3369 files in other folders)
